# aeroTAP-SDK

./: README.md  README.txt
include/: aeroTAP_SDK.h
lib/linux_arm/: aerotap.py
lib/python/: aerotap.py  aerotapPalm.py
sample/: README.txt
sample/OpenCam/: CMakeLists.txt
sample/OpenCam/src/: Sample.cpp  main.cpp
sample/PalmTrack/: CMakeLists.txt
sample/PalmTrack/src/: Sample.cpp  Sample.h  main.cpp
sample/RGBD/: CMakeLists.txt
sample/RGBD/src/: Sample.cpp  Sample.h  ZDColorPalette.h  main.cpp
sample/videoGrabber/: CMakeLists.txt  main.cpp
sample/videoGrabber/src/: main.cpp
sample/videoGrabber/src/aeroTAP/: ZDColorPalette.h  aeroTAPCamera.h  aeroTAPLinuxCamera.cpp  aeroTAPLinuxCamera.h  aeroTAPPlatform3DCamera.cpp  aeroTAPPlatform3DCamera.h  aeroTAPStereoCamera.cpp  aeroTAPStereoCamera.h  ofxUvcCamera.cpp  ofxUvcCamera.h
